GearsetPOC/force-app/main/default/objects/Redshift_Member__c/Redshift_Member__c.object-meta.xml
<CustomObject>
    <label>Redshift Member</label>
    <nameField>
        <displayFormat>RM-{0000000000}</displayFormat>
        <label>Redshift Member Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Redshift Member</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>