GearsetPOC/force-app/main/default/objects/Redshift_Member__c/fields/ManualTierImmunityLevel__c.field-meta.xml
<CustomField>
    <fullName>ManualTierImmunityLevel__c</fullName>
    <label>Manual Tier Immunity Level</label>
    <length>100</length>
    <type>Text</type>
</CustomField>