GearsetPOC/force-app/main/default/objects/Redshift_Member__c/fields/RegistrationDate__c.field-meta.xml
<CustomField>
    <fullName>RegistrationDate__c</fullName>
    <label>RegistrationDate</label>
    <type>DateTime</type>
</CustomField>