GearsetPOC/force-app/main/default/objects/Redshift_Member__c/fields/RegistrationMonth__c.field-meta.xml
<CustomField>
    <fullName>RegistrationMonth__c</fullName>
    <label>RegistrationMonth</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>