GearsetPOC/force-app/main/default/objects/Redshift_Member__c/fields/RegistrationYear__c.field-meta.xml
<CustomField>
    <fullName>RegistrationYear__c</fullName>
    <label>RegistrationYear</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>