GearsetPOC/force-app/main/default/objects/Redshift_Member__c/fields/StatusPointsBalance__c.field-meta.xml
<CustomField>
    <fullName>StatusPointsBalance__c</fullName>
    <label>StatusPointsBalance</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>