GearsetPOC/force-app/main/default/objects/Redshift_Member__c/fields/SubscriptionImmunity__c.field-meta.xml
<CustomField>
    <fullName>SubscriptionImmunity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Subscription Immunity</label>
    <type>Checkbox</type>
</CustomField>