GearsetPOC/force-app/main/default/objects/Redshift_Member__c/fields/SubscriptionTierImmunityLevel__c.field-meta.xml
<CustomField>
    <fullName>SubscriptionTierImmunityLevel__c</fullName>
    <label>Subscription Tier Immunity Level</label>
    <length>100</length>
    <type>Text</type>
</CustomField>