GearsetPOC/force-app/main/default/objects/Redshift_Member__c/fields/SubTier__c.field-meta.xml
<CustomField>
    <fullName>SubTier__c</fullName>
    <label>SubTier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>