GearsetPOC/force-app/main/default/objects/Redshift_Member__c/fields/TierImmunity__c.field-meta.xml
<CustomField>
    <fullName>TierImmunity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Manual Tier Immunity</label>
    <type>Checkbox</type>
</CustomField>