GearsetPOC/force-app/main/default/objects/Redshift_Member__c/fields/Trips__c.field-meta.xml
<CustomField>
    <fullName>Trips__c</fullName>
    <label>Trips</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>