GearsetPOC/force-app/main/default/objects/Redshift_Member__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>MembershipNumber__c</columns>
    <columns>MemberSalesforceId__c</columns>
    <columns>RegistrationDate__c</columns>
    <columns>RegistrationYear__c</columns>
    <columns>Tier__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>SubscriptionTierImmunityLevel__c</columns>
    <columns>SubscriptionImmunity__c</columns>
    <columns>TierImmunity__c</columns>
    <columns>ManualTierImmunityLevel__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>